--- a/Manuscript/STAT_W_Paper.tex
+++ b/Manuscript/STAT_W_Paper.tex
@@ -137,8 +137,9 @@
 
   \begin{figure}[h!]
     \centering
-    \includegraphics[width=16cm]{CHART1.png}
+    \includegraphics[width=15cm]{CHART1.png}
     \label{fig:chart1}
+    \caption{Chart 1}
   \end{figure}
 
 
@@ -148,8 +149,9 @@
 
  \begin{figure}[h!]
   \centering
-  \includegraphics[width=20cm]{CHART2.png}
+  \includegraphics[width=15cm]{CHART2.png}
   \label{fig:chart2}
+  \caption{Chart 2}
 \end{figure}
 
  One of the goals with using this data was to compare how different variables affect the depression score, and what set of conditions are the best for making sure that music therapy is most effective. Looking at the first two variables: individual versus group therapy. Individual therapy meant that the patient was participating in the music therapy by themselves, and group therapy meant they were in a group setting participating in the music therapy. The average of the percent change for individual therapy was 36.88\%, which is higher than for group therapy (30.97\%), which means that individual music therapy was more effective in bringing the depression score down than group therapy was. 
@@ -162,8 +164,9 @@
 
  \begin{figure}[hbt!]
   \centering
-  \includegraphics[width=20cm]{CHART3.png}
+  \includegraphics[width=15cm]{CHART3.png}
   \label{fig:chart3}
+  \caption{Chart 3}
 \end{figure}
 
  This graph shows the correlation between the total amount of time spent in music therapy and the percent decrease in depression score. There was only one study that had more than 2000 minutes of total time in therapy, which kind of skews the graph. Most of the studies had between 100 and 1000 minutes, and it looks like between 0 and 500 minutes is the ideal amount of time to spend in music therapy in order to see results because the percent change (decrease) in depression scores were highest with that time frame. The more time spent total though, the less intense the percent change was, meaning the depression score did not change as drastically. 
