--- a/Manuscript/STAT_W_Paper_cit.bib
+++ b/Manuscript/STAT_W_Paper_cit.bib
@@ -5,7 +5,7 @@
   year={2020},
   number = {},
   volume={},
-  pages={}
+  pages={},
   publisher={National Library of Medicine},
   URL={https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7673528/#sec021}
 }
