--- a/Manuscript/STAT_W_Paper.tex
+++ b/Manuscript/STAT_W_Paper.tex
@@ -64,7 +64,7 @@
     \small
     \caption{Test Group Data}
     \label{tab:1}
-  \centering
+    \centering
   \begin{tabular}{rrr}
       \toprule
   Depression Score (Before) & Depression Score (After) & Percent Change of Depression Score \\ 
@@ -139,7 +139,7 @@
     \centering
     \includegraphics[width=14cm]{CHART1.png}
     \label{fig:chart1}
-    \caption{Chart 1}
+    \caption{Percent Change}
   \end{figure}
 
 
@@ -148,11 +148,11 @@
  \end{samepage}
 
  \begin{figure}[h!]
-  \centering
-  \includegraphics[width=14cm]{CHART2.png}
-  \label{fig:chart2}
-  \caption{Chart 2}
-\end{figure}
+   \centering
+   \includegraphics[width=14cm]{CHART2.png}
+   \label{fig:chart2}
+   \caption{Barplot}
+ \end{figure}
 
  One of the goals with using this data was to compare how different variables affect the depression score, and what set of conditions are the best for making sure that music therapy is most effective. Looking at the first two variables: individual versus group therapy. Individual therapy meant that the patient was participating in the music therapy by themselves, and group therapy meant they were in a group setting participating in the music therapy. The average of the percent change for individual therapy was 36.88\%, which is higher than for group therapy (30.97\%), which means that individual music therapy was more effective in bringing the depression score down than group therapy was. 
  
@@ -163,11 +163,11 @@
  The last factor that I looked at was the age of the participants. The patients who were older than 65 $(>65)$ were more receptive to the music therapy than those younger than 65 $(<65)$, as their percent change in depression score is higher (40.67\% vs 27.19\%). Many people think that once an older adult has an issue, it is harder to treat it, but this study just shows that this specific kind of therapy works best on older individuals.
 
  \begin{figure}[hbt!]
-  \centering
-  \includegraphics[width=14cm]{CHART3.png}
-  \label{fig:chart3}
-  \caption{Chart 3}
-\end{figure}
+   \centering
+   \includegraphics[width=14cm]{CHART3.png}
+   \label{fig:chart3}
+   \caption{Scatterplot}
+ \end{figure}
 
  This graph shows the correlation between the total amount of time spent in music therapy and the percent decrease in depression score. There was only one study that had more than 2000 minutes of total time in therapy, which kind of skews the graph. Most of the studies had between 100 and 1000 minutes, and it looks like between 0 and 500 minutes is the ideal amount of time to spend in music therapy in order to see results because the percent change (decrease) in depression scores were highest with that time frame. The more time spent total though, the less intense the percent change was, meaning the depression score did not change as drastically. 
 
@@ -176,6 +176,7 @@
 
  This study allows for individuals looking to see if music therapy is an option for them, which criteria they should aim for in order to have the best outcome. There are obviously more factors that come into play than just the couple that were focused on here, but it is a good starting point. There could be more studies done in the future with even more variables taken into consideration, in order to find the absolute best way to participate in music therapy.
 
+ \newpage
 
  \bibliographystyle{chicago}
  \bibliography{STAT_W_Paper_cit}{}
