--- a/Manuscript/STAT_W_Paper.tex
+++ b/Manuscript/STAT_W_Paper.tex
@@ -49,13 +49,15 @@
 
  The control group in each of these studies was not receiving any sort of music therapy, but the test group was. These were all randomized controlled trials, and a depression scale was used for each one. Each study did not follow the same scale, but the depression scores before vs after are proportional to one another. 
  
- There were two authors that searched through possible papers to find data that met all the criteria to then be compiled into a master document. Since there is data from so many different studies, the data this paper will utilize is an average of the participants in that specific study. So the depression score before and the depression scores after are the averages for the all of the people that participated in that one study. 
+ There were two authors that searched through possible papers to find data that met all the criteria to then be compiled into a master document. Since there is data from so many different studies, the data this paper will utilize is an average of the participants in that specific study. So the depression score before and the depression scores after are the averages for all of the people that participated in that one study. 
  
  There were a couple of specifics that the two authors were looking for when searching for eligible papers and data to compile. They looked for characteristics of the paper, characteristics of the participants, the study design, the music therapy process, and the outcome measures. There are a lot of specifics under those branches that they had in their large data set, but I narrowed it down to the ones that I wanted to focus on, which were the type of music therapy (individual or group), the total number of minutes spent in music therapy over the course of the study/treatment, whether the music therapy was active or receptive, the mean age of the participants, and the depression score before and after treatment. 
  
  They ultimately ended up with 55 studies, 24 of them had the relevant information I was looking for.  Some of the studies did not take note of some of the variables that I wanted to look at, so they were not included. These are some of the variables focused on here: Individual therapy meant they were participating in therapy by themselves rather than with a group. Active therapy means that the individual was actively doing something for their music therapy, which can look like playing an instrument or singing. Receptive therapy is when someone is just absorbing whatever is put in front of them, such as listening to music and lyric analysis. 
  
  The research question I chose to look at is: how do different variables affect how effective music therapy is for individuals with depression, and does music therapy have an overall positive effect on depression? This data set gives me a lot of different variables to look at and compare to the depression scores given. Since there is a test group as well as a control group, I can compare the depression scores before and after for both groups, and see whether the music therapy was actually effective or if the depression score just naturally went down with time.
+
+ \newpage
 
  \section{Application} 
  \label{sec:application}
@@ -97,6 +99,7 @@
   \end{tabular}
   \end{table}
   
+  \newpage
   
   \begin{table}[h!]
     \small
@@ -135,6 +138,8 @@
   \end{tabular}
   \end{table}
 
+  \newpage
+
   \begin{figure}[h!]
     \centering
     \includegraphics[width=14cm]{CHART1.png}
@@ -146,6 +151,8 @@
  \begin{samepage}
  The data collected for the depression scores before the therapy started, vs after the therapy started were not in the same scale for each of the studies, as shown in Table 1. Therefore, it did not make sense to compare the difference in scores, or look at the scores directly, because there would most likely be no correlation, since the values range from pretty high to pretty low. Regardless, the percent change looks at the first value of the depression score, the second value of the depression score, and sees by what percentage the score got better or worse. The higher the percent change, the more effective therapy was because the depression score got lower by that percentage. Therefore, a negative percent change means that the depression score after therapy was higher than the depression score before therapy, which means that as time passed the depression got worse. Looking at this graph, the percent change for the test group is higher than the control group in almost every single study, excluding studies 17 and 23. This shows that music therapy was more effective in decreasing depression levels than not having music therapy.
  \end{samepage}
+
+ \newpage
 
  \begin{figure}[h!]
    \centering
@@ -162,6 +169,8 @@
  
  The last factor that I looked at was the age of the participants. The patients who were older than 65 $(>65)$ were more receptive to the music therapy than those younger than 65 $(<65)$, as their percent change in depression score is higher (40.67\% vs 27.19\%). Many people think that once an older adult has an issue, it is harder to treat it, but this study just shows that this specific kind of therapy works best on older individuals.
 
+ \newpage
+ 
  \begin{figure}[hbt!]
    \centering
    \includegraphics[width=14cm]{CHART3.png}
