--- a/Manuscript/STAT_W_Paper.tex
+++ b/Manuscript/STAT_W_Paper.tex
@@ -47,7 +47,12 @@
 
  The data used was collected from several different studies and compiled together in order to form a more cohesive understanding of whether music therapy affects people or not. It is part of an article called: “Effects of Music Therapy on Depression: A Meta-Analysis of Random Controlled Trials” in the National Library of Medicine \citet{PLOS}. 
 
- The control group in each of these studies was not receiving any sort of music therapy, but the test group was. These were all randomized controlled trials, and a depression scale was used for each one. Each study did not follow the same scale, but the depression scores before vs after are proportional to one another. 
+ The control group in each of these studies was not receiving any sort of music therapy, but the test group was. These were all randomized controlled trials, and a depression scale was used for each one. Each study did not follow the same scale, but the depression scores before vs after are proportional to one another. The following equation was used to derive the percent change of the depression scores before and after treatment:
+
+ $$x = \text{depression score before treatment}$$
+ $$y = \text{depression score after treatment}$$
+
+ $$\text{percent change} = [(x-y)/x]*100$$ 
  
  There were two authors that searched through possible papers to find data that met all the criteria to then be compiled into a master document. Since there is data from so many different studies, the data this paper will utilize is an average of the participants in that specific study. So the depression score before and the depression scores after are the averages for all of the people that participated in that one study. 
  
