--- a/Manuscript/STAT_W_Paper.tex
+++ b/Manuscript/STAT_W_Paper.tex
@@ -12,13 +12,28 @@
 
 
  %% meta data
-
- \title{How Different Variables Affect Depression Scores in Individuals, and Which Set of Variables Provide the Best Outcomes}
- \author{Olivia Dybinski\\}
- \date{November 2022}
-
  \begin{document}
  \maketitle
+
+ \begin{titlepage}
+   \begin{center}
+    \vspace*{1cm}
+    \Huge
+    \textbf{Music Therapy and its Affect on Depression}
+    \large
+    \vspace{1cm}
+    How Different Variables Affect Depression Scores in Individuals, and Which Set of Variables Provide the Best Outcomes
+    \vspace{1.5cm}
+    December 2022
+    \vspace{0.8cm}
+    \textbf{Olivia Dybibnski}
+    \vspace{0.8cm}
+    \Large
+    Department of Statistics\\
+    University of Connecticut\\
+    Storrs, CT\\
+   \end{center}
+  \end{titlepage}
 
 
  \begin{abstract}
@@ -75,7 +90,7 @@
     \centering
   \begin{tabular}{rrr}
       \toprule
-  Depression Score (Before) & Depression Score (After) & Percent Change of Depression Score \\ 
+  Depression Score (Before) & Depression Score (After) & \% Change of Depression Score \\ 
     \midrule
      5.05 & 3.6 & 28.71\\ 
      8 & 5.2 & 35\\ 
@@ -114,7 +129,7 @@
   \centering
   \begin{tabular}{rrr}
       \toprule
-  Depression Score (Before) & Depression Score (After) & Percent Change of Depression Score \\ 
+  Depression Score (Before) & Depression Score (After) & \% Change of Depression Score \\ 
     \midrule
      4.92 & 4.84 & 1.63\\ 
      8 & 6.5 & 18.75\\ 
