--- a/Manuscript/STAT_W_Paper.tex
+++ b/Manuscript/STAT_W_Paper.tex
@@ -12,28 +12,12 @@
 
 
  %% meta data
- \begin{document}
- \maketitle
+ \title{How Different Variables Affect Depression Scores in Individuals, and Which Set of Variables Provide the Best Outcomes}
+ \author{Olivia Dybinski\\}
+ \date{December 2022}
 
- \begin{titlepage}
-   \begin{center}
-    \vspace*{1cm}
-    \Huge
-    \textbf{Music Therapy and its Affect on Depression}
-    \large
-    \vspace{1cm}
-    How Different Variables Affect Depression Scores in Individuals, and Which Set of Variables Provide the Best Outcomes
-    \vspace{1.5cm}
-    December 2022
-    \vspace{0.8cm}
-    \textbf{Olivia Dybibnski}
-    \vspace{0.8cm}
-    \Large
-    Department of Statistics\\
-    University of Connecticut\\
-    Storrs, CT\\
-   \end{center}
-  \end{titlepage}
+ \begin{document}
+  \maketitle
 
 
  \begin{abstract}
