--- a/Manuscript/STAT_W_Paper.tex
+++ b/Manuscript/STAT_W_Paper.tex
@@ -12,13 +12,16 @@
 
 
  %% meta data
+ \Huge
+ \textbf{Music Therapy and its Affect on Depression}
  \title{How Different Variables Affect Depression Scores in Individuals, and Which Set of Variables Provide the Best Outcomes}
  \author{Olivia Dybinski\\}
  \date{December 2022}
 
+ \newpage
+
  \begin{document}
   \maketitle
-
 
  \begin{abstract}
  \label{sec:abstract}
