--- a/Manuscript/STAT_W_Paper.tex
+++ b/Manuscript/STAT_W_Paper.tex
@@ -12,9 +12,8 @@
 
 
  %% meta data
- \Huge
- \textbf{Music Therapy and its Affect on Depression}
- \title{How Different Variables Affect Depression Scores in Individuals, and Which Set of Variables Provide the Best Outcomes}
+ \title{Music Therapy and its Affect on Depression}
+  How Different Variables Affect Depression Scores in Individuals, and Which Set of Variables Provide the Best Outcomes
  \author{Olivia Dybinski\\}
  \date{December 2022}
 
