--- a/Manuscript/STAT_W_Paper.tex
+++ b/Manuscript/STAT_W_Paper.tex
@@ -12,8 +12,7 @@
 
 
  %% meta data
- \title{Music Therapy and its Affect on Depression}
-  How Different Variables Affect Depression Scores in Individuals, and Which Set of Variables Provide the Best Outcomes
+ \title{Music Therapy and its Affect on Depression \\[1ex] \large How Different Variables Affect Depression Scores in Individuals, and Which Set of Variables Provide the Best Outcomes}
  \author{Olivia Dybinski\\}
  \date{December 2022}
 
