--- a/Manuscript/STAT_W_Paper.tex
+++ b/Manuscript/STAT_W_Paper.tex
@@ -7,6 +7,7 @@
  \usepackage{amsmath}
  \usepackage{natbib}
  \usepackage{float}
+ \usepackage{setspace} \doublespacing
  \usepackage[colorlinks=true, citecolor=blue]{hyperref}
  \usepackage{bookmark}
 
@@ -20,7 +21,6 @@
 
  \begin{document}
   \maketitle
-  \doublespace{}
  \begin{abstract}
  \label{sec:abstract}
 
