title and spacing

--- a/Manuscript/STAT_W_Paper.tex
+++ b/Manuscript/STAT_W_Paper.tex
@@ -3,6 +3,7 @@
  %% preamble
  \usepackage[utf8]{inputenc}
  \usepackage{graphicx}
+ \usepackage[margin=1in]{geometry}
  \usepackage{booktabs}
  \usepackage{amsmath}
  \usepackage{natbib}
@@ -14,7 +15,9 @@
 
  %% meta data
  \title{Music Therapy and its Affect on Depression \\[1ex] \large How Different Variables Affect Depression Scores in Individuals, and Which Set of Variables Provide the Best Outcomes}
- \author{Olivia Dybinski\\}
+ \author{Olivia Dybinski\\
+  Department of Statistics\\
+  University of Connecticut}
  \date{December 2022}
 
  \newpage
