--- a/Manuscript/STAT_W_Paper.tex
+++ b/Manuscript/STAT_W_Paper.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt]{article}
+\documentclass[12pt, titlepage]{article}
 
  %% preamble
  \usepackage[utf8]{inputenc}
@@ -24,6 +24,7 @@
  \begin{document}
   \newpage
   \maketitle
+  
  \begin{abstract}
  \label{sec:abstract}
 
