--- a/Manuscript/STAT_W_Paper.tex
+++ b/Manuscript/STAT_W_Paper.tex
@@ -24,7 +24,7 @@
  \begin{document}
   \newpage
   \maketitle
-  
+
  \begin{abstract}
  \label{sec:abstract}
 
@@ -42,7 +42,7 @@
 
  There are countless methods out there to try to keep depression at bay, like different kinds of drugs, different kinds of therapy, and other programs. Sometimes it can be difficult for those without access to some of these methods to be treated for depression, so it is important to have treatments available that do not involve prescription medications or therapists. Music is something that has been passed down for generations, and is more readily accessible than other methods of treating depression, which is why there is a lot of research going into this topic. There have been many other studies done on music therapy. Some include comparing music therapy to traditional methods of treating depression, like psychological, pharmacological, and other therapies \citet{Cochrane}, studies looking at how traditional methods work hand in hand with music therapy \citet{British}, and studies analyzing how music therapy affects a variety of psychosocial practices like arousal, mood, social connection, as well as many others \citet{Frontiers}. All of these studies focus on how music therapy works hand in hand with other therapies or how they affect specific parts of someone, but this analysis focuses on whether or not different variables affect depression in a positive or negative way, and which variables yield the best results. 
 
- Specifically, the data collected had various variables about the study taken note of, such as if the therapy was individual or group, active or receptive, the average age of participants and how much time was spent total in therapy throughout the sessions. Finding out which variables are more likely to yield better results will aid in figuring out treatment options and treatment plans for people looking to work their depression.
+ Specifically, the data collected had various variables about the study taken note of, such as if the therapy was individual or group, active or receptive, the average age of participants and how much time was spent total in therapy throughout the sessions. Finding out which variables are more likely to yield better results will aid in figuring out treatment options and treatment plans for people looking to work their depression. In this paper I will focus on how different variables affect how efective music therapy is for individuals with depression, and whether or not music therapy has an overall positive effect on depression.
 
  Section \ref{sec:data} will provide details about the data, and then section \ref{sec:application} will provide all the outputs and explanations for what it all means in terms of depression score. Finally, section \ref{sec:discussion} will provide some closing statements, and how this research could be improved even further. The references are listed at the very end.
 
@@ -62,7 +62,7 @@
  
  There were a couple of specifics that the two authors were looking for when searching for eligible papers and data to compile. They looked for characteristics of the paper, characteristics of the participants, the study design, the music therapy process, and the outcome measures. There are a lot of specifics under those branches that they had in their large data set, but I narrowed it down to the ones that I wanted to focus on, which were the type of music therapy (individual or group), the total number of minutes spent in music therapy over the course of the study/treatment, whether the music therapy was active or receptive, the mean age of the participants, and the depression score before and after treatment. 
  
- They ultimately ended up with 55 studies, 24 of them had the relevant information I was looking for.  Some of the studies did not take note of some of the variables that I wanted to look at, so they were not included. These are some of the variables focused on here: Individual therapy meant they were participating in therapy by themselves rather than with a group. Active therapy means that the individual was actively doing something for their music therapy, which can look like playing an instrument or singing. Receptive therapy is when someone is just absorbing whatever is put in front of them, such as listening to music and lyric analysis. 
+ They ultimately ended up with 55 studies, 24 of them had the relevant information I was looking for.  Some of the studies did not take note of some of the variables that I wanted to look at, so they were not included. I will now discuss some of the variables that I focused on. Individual therapy meant they were participating in therapy by themselves rather than with a group. Active therapy means that the individual was actively doing something for their music therapy, which can look like playing an instrument or singing. Receptive therapy is when someone is just absorbing whatever is put in front of them, such as listening to music and lyric analysis. 
  
  The research question I chose to look at is: how do different variables affect how effective music therapy is for individuals with depression, and does music therapy have an overall positive effect on depression? This data set gives me a lot of different variables to look at and compare to the depression scores given. Since there is a test group as well as a control group, I can compare the depression scores before and after for both groups, and see whether the music therapy was actually effective or if the depression score just naturally went down with time.
 
