--- a/Manuscript/STAT_W_Paper.tex
+++ b/Manuscript/STAT_W_Paper.tex
@@ -191,8 +191,9 @@
  \section{Discussion} 
  \label{sec:discussion}
 
- This study allows for individuals looking to see if music therapy is an option for them, which criteria they should aim for in order to have the best outcome. There are obviously more factors that come into play than just the couple that were focused on here, but it is a good starting point. There could be more studies done in the future with even more variables taken into consideration, in order to find the absolute best way to participate in music therapy.
+ This study allows for individuals looking to see if music therapy is an option for them, which criteria they should aim for in order to have the best outcome. There are obviously more factors that come into play than just the couple that were focused on here, but it is a good starting point. The question that I looked at was, “How do different variables affect how effective music therapy is for individuals with depression, and does music therapy have an overall positive effect on depression?”. Starting out with the variables, the best mix of circumstances seems to be taking part in individual therapy, have the total amount of time spent in sessions be less than 500 minutes, be participating in receptive therapy, and be older than 60 years old. These parameters had the best outcome, and helped depression score lower most. Overall, participating in music therapy in any capacity helped lower depression scores for individuals, like figure 1 shows us. The control groups (excluding two of the studies) all had less of an improvement in depression scores, or maybe no improvement at all.
 
+ There could be more studies done in the future with even more variables taken into consideration, in order to find the absolute best way to participate in music therapy. This study’s limitation was that not every study used the same parameters or scale to measure the depression score. If all the numbers were within the same scale, I could have done a lot more analysis on the data, but I was limited on the analysis that I could do. There were a lot of parameters that were not controlled, which could have caused some variability. Also, the fact that it was a mix between qualitative and quantitative data caused me to have to use different techniques whereas if it was all quantitative it would have been different. In the future, it would be phenomenal to do another study that was a bit more controlled to really make sure which variables were the ones cursing the depression score to go up or down.
  \newpage
 
  \bibliographystyle{chicago}
