--- a/Manuscript/STAT_W_Paper.tex
+++ b/Manuscript/STAT_W_Paper.tex
@@ -42,7 +42,7 @@
 
  There are countless methods out there to try to keep depression at bay, like different kinds of drugs, different kinds of therapy, and other programs. Sometimes it can be difficult for those without access to some of these methods to be treated for depression, so it is important to have treatments available that do not involve prescription medications or therapists. Music is something that has been passed down for generations, and is more readily accessible than other methods of treating depression, which is why there is a lot of research going into this topic. There have been many other studies done on music therapy. Some include comparing music therapy to traditional methods of treating depression, like psychological, pharmacological, and other therapies \citet{Cochrane}, studies looking at how traditional methods work hand in hand with music therapy \citet{British}, and studies analyzing how music therapy affects a variety of psychosocial practices like arousal, mood, social connection, as well as many others \citet{Frontiers}. All of these studies focus on how music therapy works hand in hand with other therapies or how they affect specific parts of someone, but this analysis focuses on whether or not different variables affect depression in a positive or negative way, and which variables yield the best results. 
 
- Specifically, the data collected had various variables about the study taken note of, such as if the therapy was individual or group, active or receptive, the average age of participants and how much time was spent total in therapy throughout the sessions. Finding out which variables are more likely to yield better results will aid in figuring out treatment options and treatment plans for people looking to work their depression. In this paper I will focus on how different variables affect how efective music therapy is for individuals with depression, and whether or not music therapy has an overall positive effect on depression.
+ Specifically, the data collected had various variables about the study taken note of, such as if the therapy was individual or group, active or receptive, the average age of participants and how much time was spent total in therapy throughout the sessions. Finding out which variables are more likely to yield better results will aid in figuring out treatment options and treatment plans for people looking to work on their depression. In this paper I will focus on how different variables affect how efective music therapy is for individuals with depression, and whether or not music therapy has an overall positive effect on depression.
 
  Section \ref{sec:data} will provide details about the data, and then section \ref{sec:application} will provide all the outputs and explanations for what it all means in terms of depression score. Finally, section \ref{sec:discussion} will provide some closing statements, and how this research could be improved even further. The references are listed at the very end.
 
@@ -191,7 +191,7 @@
  \section{Discussion} 
  \label{sec:discussion}
 
- This study allows for individuals looking to see if music therapy is an option for them, which criteria they should aim for in order to have the best outcome. There are obviously more factors that come into play than just the couple that were focused on here, but it is a good starting point. The question that I looked at was, “How do different variables affect how effective music therapy is for individuals with depression, and does music therapy have an overall positive effect on depression?”. Starting out with the variables, the best mix of circumstances seems to be taking part in individual therapy, have the total amount of time spent in sessions be less than 500 minutes, be participating in receptive therapy, and be older than 60 years old. These parameters had the best outcome, and helped depression score lower most. Overall, participating in music therapy in any capacity helped lower depression scores for individuals, like figure 1 shows us. The control groups (excluding two of the studies) all had less of an improvement in depression scores, or maybe no improvement at all.
+ This study allows for individuals looking to see if music therapy is an option for them, and which criteria they should aim for in order to have the best outcome. There are obviously more factors that come into play than just the couple that were focused on here, but it is a good starting point. The question that I looked at was, “How do different variables affect how effective music therapy is for individuals with depression, and does music therapy have an overall positive effect on depression?”. Starting out with the variables, the best mix of circumstances seems to be taking part in individual therapy, have the total amount of time spent in sessions be less than 500 minutes, be participating in receptive therapy, and be older than 60 years old. These parameters had the best outcome, and helped depression score lower most. Overall, participating in music therapy in any capacity helped lower depression scores for individuals, like figure 1 shows us. The control groups (excluding two of the studies) all had less of an improvement in depression scores, or maybe no improvement at all.
 
  There could be more studies done in the future with even more variables taken into consideration, in order to find the absolute best way to participate in music therapy. This study’s limitation was that not every study used the same parameters or scale to measure the depression score. If all the numbers were within the same scale, I could have done a lot more analysis on the data, but I was limited on the analysis that I could do. There were a lot of parameters that were not controlled, which could have caused some variability. Also, the fact that it was a mix between qualitative and quantitative data caused me to have to use different techniques whereas if it was all quantitative it would have been different. In the future, it would be phenomenal to do another study that was a bit more controlled to really make sure which variables were the ones cursing the depression score to go up or down.
  \newpage
